--- a/main.html
+++ b/main.html
@@ -8,22 +8,27 @@
   <body><div class="container-fluid" style="height: 100%">
   <div class="row-fluid">
   <div class="span6">
-  <h1>GPS Tracker</h1>
-  <h3>Select a port to monitor:</h3>
-  <form class="form-inline">
-    <div class="input-append">
-      <select id="portDropdown"></select>
-      <input type="button" class="btn btn-success" id="openPort" value="Open"></input>
-    </div>
-    <input type="button" class="btn btn-danger" id="closePort" value="Close"></input>
-  </form>
+  <div id="controlPanel">
+    <h1>GPS Tracker</h1>
+    <h3>Select a port to monitor:</h3>
+    <form class="form-inline">
+      <div class="input-append">
+        <select id="portDropdown"></select>
+        <input type="button" class="btn btn-success" id="openPort" value="Open"></input>
+      </div>
+      <input type="button" class="btn btn-danger" id="closePort" value="Close"></input>
+    </form>
+    <div class="row"></div>
+  </div>
+  <div id="dataPanel" style="height: 600px; overflow: auto">
   <table class="table table-hover table-condensed">
     <thead><tr>
       <th>Date</th><th>Time</th><th>Fix</th><th>Qual</th><th>Latitude</th>
       <th>Longitude</th><th>Alt</th><th>Angle</th><th>Speed(knots)</th><th>Sats</th>
     </tr></thead>
-    <tbody id="geoTable" style="height: 600px; overflow: auto"></tbody>
+    <tbody id="geoTable"></tbody>
   </table>
+  </div>
   </div>
   <div class="span6">
     <iframe id="mapFrame" src="map.html" width="100%" height="100%"></iframe>
